RESOLVED FIXED46005
[BREWMP] Wrong key code type in keyIdentifierForBrewKeyCode
https://bugs.webkit.org/show_bug.cgi?id=46005
Summary [BREWMP] Wrong key code type in keyIdentifierForBrewKeyCode
Kwang Yul Seo
Reported 2010-09-17 15:36:19 PDT
The type of key code in Brew MP is uint16. Take uint16 instead of int16 in keyIdentifierForBrewKeyCode.
Attachments
Patch (1.17 KB, patch)
2010-09-17 15:37 PDT, Kwang Yul Seo
no flags
Kwang Yul Seo
Comment 1 2010-09-17 15:37:27 PDT
Andreas Kling
Comment 2 2010-09-17 19:09:33 PDT
Comment on attachment 67964 [details] Patch r=me
WebKit Commit Bot
Comment 3 2010-09-18 15:48:52 PDT
Comment on attachment 67964 [details] Patch Clearing flags on attachment: 67964 Committed r67794: <http://trac.webkit.org/changeset/67794>
WebKit Commit Bot
Comment 4 2010-09-18 15:48:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.