2010-09-18  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Andreas Kling.

        [BREWMP] Wrong key code type in keyIdentifierForBrewKeyCode
        https://bugs.webkit.org/show_bug.cgi?id=46005

        The type of key code in Brew MP is uint16. Take uint16 instead of int16 in keyIdentifierForBrewKeyCode.

        * platform/brew/PlatformKeyboardEventBrew.cpp:
        (WebCore::keyIdentifierForBrewKeyCode):

Canonical link: https://commits.webkit.org/58500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67794 268f45cc-cd09-0410-ab3c-d52691b4dbfc